# py3-interview-prep

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
interview/: code.py  example.py
tests/: test_example.py
