[project]
name = "programming-interview-skeleton-py"
version = "0.1.0"
description = "programming interview code"
authors = [{name = "Jacob Scott", email = "jacob.scott@gmail.com"}]
license = {file="LICENSE"}
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "more-itertools>=10.6.0",
    "mypy>=1.15.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
python_files = "*.py"
filterwarnings = ["ignore::DeprecationWarning"]
markers=["unit: Unit tests.",
         "system: System (browser-based) tests."]
         

[tool.ruff]
line-length = 120
fix = true
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-fixable = ["E", "F", "UP", "B", "SIM", "I"]
